# pnfl-profilewriter

./: .editorconfig  .gitignore  .prettierignore  ARCHITECTURE.md  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.claude/: settings.json
src/pnfl_profilewriter/: __init__.py  copy_cli.py  main.py  profile_writer.py
tests/: conftest.py  test_copy_cli.py  test_profile_writer.py
tests/data/: TST-DEF1.prf  TST-DEF2.prf  TST-OFF1.prf  TST-OFF2.prf
